| Bug #13323 | select count(*) error in partition engine | ||
|---|---|---|---|
| Submitted: | 19 Sep 2005 14:00 | Modified: | 19 Sep 2005 21:38 |
| Reporter: | Tomas Ulin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | |
| Assigned to: | Mikael Ronström | CPU Architecture: | Any |
[19 Sep 2005 14:00]
Tomas Ulin
[19 Sep 2005 21:38]
Mikael Ronström
Small fix for calculating records when HA_NOT_EXACT_COUNT not set
