Bug #13323 Select count(*) returned 2 on empty table where handler used exact count

mysql-test/r/partition.result:
  New test case for Bug #13323
mysql-test/t/partition.test:
  New test case for Bug #13323
sql/ha_partition.cc:
  Fix for Bug #13323